apps/blackjack/blackjack-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blackjack
  namespace: blackjack
  # annotations:
  #   argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: blackjack
  replicas: 2
  template:
    metadata:
      labels:
        app: blackjack
    spec:
      containers:
      - name: blackjack
        image: shlomobarzili/blackjack:latest
        imagePullPolicy: Always     
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: blackjack-storage
          mountPath: /storage-data    
      volumes:                
      - name: blackjack-storage
        persistentVolumeClaim:
          claimName: blackjack-pvc
