apps/blackjack/blackjack-ingress.yml
# for working with alb type application you need to install helm and install the ingress controller aws.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blackjack
  namespace: blackjack # the namespace that sperate the pods  between envroments.
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # the alb move the traffic directly to pods
    alb.ingress.kubernetes.io/security-groups: sg-0de4d874368510b0f
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/889666e4-fea3-49a0-a335-7f80447053f2
    alb.ingress.kubernetes.io/subnets: subnet-0952293eea1cd2039,subnet-04a7b66e961fc6aa6 # Public subnetbs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # listen ports
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
  #  alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/blackjack-waf/568de2c9-9afb-4e12-b500-1da3eb558698

spec:
  ingressClassName: alb
  rules:
  # those rules for the application to allow the metrics/presentation/and the application
    - host: blackjack.spider-shlomo.com
    - http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation

          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation    

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation          

          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
                  
          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
